2009-07-16  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Oliver Hunt.

        Canvas: rotation of 'no-repeat' pattern still has small error
        https://bugs.webkit.org/show_bug.cgi?id=26749

        Use (1<<23)/2 as steps of no-repeat pattern to make the error less
        than 0.5.  The previous value may cause 1 pixel errors.

        Add another test to show this bug clearly.
        Also add png expected image which was missing in the previous patch.

        * fast/canvas/image-pattern-rotate.html: Added.
        * platform/mac/fast/canvas/image-object-in-canvas-expected.checksum:
        * platform/mac/fast/canvas/image-object-in-canvas-expected.png:
        * platform/mac/fast/canvas/image-pattern-rotate-expected.checksum: Added.
        * platform/mac/fast/canvas/image-pattern-rotate-expected.png: Added.
        * platform/mac/fast/canvas/image-pattern-rotate-expected.txt: Added.

2009-07-16  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Oliver Hunt.

        Canvas: rotation of 'no-repeat' pattern still has small error
        https://bugs.webkit.org/show_bug.cgi?id=26749

        Use (1<<23)/2 as steps of no-repeat pattern to make the error less
        than 0.5.  The previous value may cause 1 pixel errors.

        Add another test to show this bug clearly.
        Also add png expected image which was missing in the previous patch.

        Test: fast/canvas/image-pattern-rotate.html

        * platform/graphics/cg/PatternCG.cpp:
        (WebCore::Pattern::createPlatformPattern):

Canonical link: https://commits.webkit.org/38009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46399 268f45cc-cd09-0410-ab3c-d52691b4dbfc