WebCore/platform/graphics/cg/PatternCG.cpp
@@ -63,10 +63,9 @@ CGPatternRef Pattern::createPlatformPattern(const TransformationMatrix& userSpac
     // result in nothing being rendered.
     // INT_MAX is almost correct, but there seems to be some number wrapping occuring making the fill
     // pattern is not filled correctly.
-    // To make error of floating point less than 1, we need to use a big number which is smaller than the
-    // number of mantissa of float (1 << 23).
-    CGFloat xStep = m_repeatX ? tileRect.width() : ((1 << 23) - 1);
-    CGFloat yStep = m_repeatY ? tileRect.height() : ((1 << 23) - 1);
+    // To make error of floating point less than 0.5, we use the half of the number of mantissa of float (1 << 22).
+    CGFloat xStep = m_repeatX ? tileRect.width() : (1 << 22);
+    CGFloat yStep = m_repeatY ? tileRect.height() : (1 << 22);
 
     // The pattern will release the tile when it's done rendering in patternReleaseCallback
     tileImage()->ref();
